# pv-excess-manager

./: .devcontainer.json  .pre-commit-config.yaml  .ruff.toml  CONTRIBUTING.md  LICENSE  Makefile  README.md  hacs.json  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: lint.yml  validate.yml
config/: configuration.yaml
custom_components/pv_excess_manager/: ___switch.py  __init__.py  algorithm.py  binary_sensor.py  config_flow.py  config_schema.py  const.py  coordinator.py  data.py  exceptions.py  input_number.py  managed_device.py  manifest.json  number.py  sensor.py  services.yaml  strings.json  switch.py  util.py
custom_components/pv_excess_manager/translations/: en.json
scripts/: develop
